Removed overflow hidden from #contentDiv. Fixes #126

--- a/frontend/app/design/design.sass
+++ b/frontend/app/design/design.sass
@@ -247,8 +247,8 @@ label.fixed-width
   padding: .3em .1em
 
 
-#contentDiv
-  overflow: hidden
+//#contentDiv
+//  overflow: hidden
 
 
 #contentLanguageDiv
